--- a/framework-web/src/main/webapp/static/resource/resource.css
+++ b/framework-web/src/main/webapp/static/resource/resource.css
@@ -20,9 +20,13 @@
     list-style-type: none;
 }
 
-
 .mymenu .two {
     float: left;
-    width:45%;
-    height:30px;
+    width: 40%;
+    height: 30px;
+}
+
+.mymenu  label {
+    display: inline-block;
+    width: 50px;
 }
